--- a/inclass-2/pizza.html
+++ b/inclass-2/pizza.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Pizza Guys Order Form</h1>
+        <img src="http://www.mysticpizza.com/admin/resources/pizza-pepperoni-w857h456.jpg" alt="Image Missing" width="256" height="256">
         <form id="myform">
             Name:<br/>
             <input type = "text" name = "name" placeholder = "your name" required>
