--- a/inclass-3/hello.html
+++ b/inclass-3/hello.html
@@ -8,6 +8,7 @@
         </style>
         <title>Hello HTML!</title>
         <meta charset="utf-8">
+        <meta name="author" content="Min Zhou">
     </head>
 
     <body onload="setTimeout(time,5000)">
