--- a/hw1/index.html
+++ b/hw1/index.html
@@ -24,12 +24,12 @@
 			<input type="text" name="DisplayName" placeholder="Display Name(optional)" size = "25" pattern="[A-Za-z][A-Za-z0-9]*">
 			<br/>
 			<br/>
-			<B>Email Address:</B><br/>
+			<B>Email Address: </B><br/>
 			<input type="email" name="Email" placeholder="Your Email" size = "30" required><span class="asterisk">*</span>
 			<br/>
 			<br/>
-			<B>Phone Number:</B><br/>
-			<input type="tel" name="Phone" placeholder="Phone Number" size = "30" required><span class="asterisk">*</span>
+			<B>Phone Number: </B><em>xxx-xxx-xxxx</em><br/>
+			<input type="tel" name="Phone" placeholder="Phone Number" size = "30" pattern="\d\d\d-\d\d\d-\d\d\d\d" required><span class="asterisk">*</span>
 			<br/>
 			<br/>
 			<B>Data of Birth:</B><br/>
