--- a/inclass-4/main.html
+++ b/inclass-4/main.html
@@ -9,7 +9,7 @@
 			background-color: #00FFFF;
 		}
         nav div { 
-			background-color: #01F901;
+			background-color: #3498db;
 			position: fixed;
 			width: 100%;
 			top: -1em;
@@ -32,6 +32,11 @@
 			font-size: 4em;
 			font-family: "Times New Roman"; 
 		}
+		
+		span{
+			font-style: italic; 	
+			font-size: 20px;
+		}
 		.card{
 			margin-left:15%;
 			margin-right:15%;
@@ -44,15 +49,11 @@
 			background-color: #ccc;
 			float: left;
 		}	
-		span{
-			font-style: italic; 	
-			font-size: 20px;
-		}
 		.textArea{
 			margin-left:15%;
 			margin-right:15%;
 			margin-top:10px;
-			border: 3px groove #FFA5A5; 
+			border: 3px groove #3498db; 
 		    outline:0; 
 		    width: 275px;
 		}
@@ -61,19 +62,11 @@
 			margin-right:15%;
 			margin-top:5px;
 			background: #3498db;
-		    background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-		    background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-		    background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-		    background-image: -o-linear-gradient(top, #3498db, #2980b9);
-		    background-image: linear-gradient(to bottom, #3498db, #2980b9);
-		    -webkit-border-radius: 28;
-		    -moz-border-radius: 28;
 		    border-radius: 28px;
 		    font-family: Courier New;
 		    color: #ffffff;
 		    font-size: 20px;
 		    text-decoration: none;
-
 		}
 
 	</style>
