--- a/hw1/index.html
+++ b/hw1/index.html
@@ -53,7 +53,7 @@
 			<input type="button" value="Clear" onclick="formClear();">
 		</form>
 	</body>
-	<script>
+	<script type="text/javascript">
 		function formSubmit(){
 
 			var res,date,birthDay,yearDiff,monthDiff,dayDiff,p1,p2;
@@ -87,4 +87,5 @@
 			document.getElementById("resForm").reset();
 		}
 	</script>
+
 </html>
